# ReactiveBible

./: .env.example  .gitignore  CMakeLists.txt  README.md  RELEASE_NOTES.md  config.example.json  config.json
.cache/clangd/index/: amx.cpp.515FB796FFE08359.idx  amx.h.10F906CD3ED32169.idx  api_fetch.cpp.6ED1AABBFFAC6046.idx  api_fetch.h.233406EBE2C14771.idx  arch-fallback.h.5261478D5F093DA9.idx  binary-ops.cpp.6FB951A82493F0EA.idx  binary-ops.h.6BA91B9317C58566.idx  book_normalizer.cpp.8D34A7CB3D677A01.idx  book_normalizer.h.4E66E68B4F51BF0D.idx  cache.cpp.EF47236847219ADC.idx  cache.h.5C0C3A1958D31073.idx  common.h.16E1E46751E26DF6.idx  common.h.7B38632174CB3710.idx  context_resolver.cpp.694ACD2D6CEE5244.idx  context_resolver.h.E5286615602AC010.idx  dedup.cpp.42B85AC4C8C48142.idx  dedup.h.7A964756113720FD.idx  ggml-alloc.c.C50FEC50B4017BF0.idx  ggml-alloc.h.30B9A0D6278B6C62.idx  ggml-backend-dl.cpp.398F1C3E1BFDAAC0.idx  ggml-backend-dl.h.A9167D644B86CF9D.idx  ggml-backend-impl.h.C4747B4DFDA63600.idx  ggml-backend-reg.cpp.3607B0EA28FF3098.idx  ggml-backend.cpp.7884A9F4899744CA.idx  ggml-backend.h.E8273643952AC865.idx  ggml-blas.cpp.7ED2E3D81E391E01.idx  ggml-blas.h.FCEF2629C0C8475C.idx  ggml-common.h.5597690E2BD95140.idx  ggml-cpp.h.5BC58B98213CFCF5.idx  ggml-cpu-impl.h.D70262A175B133B3.idx  ggml-cpu.c.79382EDD88F9C51A.idx  ggml-cpu.cpp.8F9D3C7AEB23DD2A.idx  ggml-cpu.h.9C2E032F29E74BD1.idx  ggml-impl.h.E50360DBA2A1D67C.idx  ggml-metal-common.cpp.6380096E0BCEBDD1.idx  ggml-metal-common.h.424F741C118E30FB.idx  ggml-metal-context.h.E60FE74E9E8137C0.idx  ggml-metal-context.m.AB3499EE1D1F2C53.idx  ggml-metal-device.cpp.9CA56C49AEC4D261.idx  ggml-metal-device.h.58857B8012058F19.idx  (+53 more)
.github/workflows/: build.yml
app/: bible-fetcher.js  calibration-worker.js  dev-server.js  display.html  index.html  main.js  package-lock.json  package.json  preload.js  profile-analyzer.js  profile-manager.js  sync-client.js  sync-server.js  test-packaging.js  themes.cjs
app/src/: App.jsx  index.css  main.jsx  themes.js
app/src/components/: DisplayOutputs.jsx  Header.jsx  LiveDisplayPanel.jsx  PastorProfileModal.jsx  PreviewPanel.jsx  QueuePanel.jsx  RecentDetections.jsx  SearchScripture.jsx  SessionBar.jsx  SettingsModal.jsx  Toast.jsx  TranscriptPanel.jsx
app/src/hooks/: useAudio.js
app/src/store/: useStore.js
bibles/: msg.json.partial  niv.json  tpt.json.partial
scripts/: prefetch.py
src/: api_fetch.cpp  api_fetch.h  book_normalizer.cpp  book_normalizer.h  cache.cpp  cache.h  context_resolver.cpp  context_resolver.h  dedup.cpp  dedup.h  intent_resolver.cpp  intent_resolver.h  local_intent_resolver.cpp  local_intent_resolver.h  main.cpp  normalizer.cpp  normalizer.h  output.cpp  output.h  pastor_profile.cpp  pastor_profile.h  pipeline.cpp  pipeline.h  session_state.cpp  session_state.h  transcriber_main.cpp
